--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react": "^18.2.55",
     "immer": "^10.0.3",
     "next-themes": "^0.2.1",
     "preact": "^10.19.3",
